# Cocktail-DCC

./: .gitignore  CMakeLists.txt  README.md  RIVMSources.txt  build.sh  getdeps.f90  libcocktaildcc.f90  libendf.f90  libinterval.f90  mature_nuclides.f90  precalculate_dose_development.sh  precompute_everything.sh  readme.docx
cmake/: CompileOptions.cmake
resources/: Axelsson_fullTerm.RIVMSource  CoVeGa_v63_voorRapport_Inhalation.prn  Kraus_and_Foster_table2.RIVMSource  links_to_data
src/: CMakeLists.txt  NuclideDecay03c.f90  SourceTermdose06AC.f90  mature_nuclides.f90  nuclide_decay.f90  source_term_dose.f90  test_cocktail_dcc.f90  testcocktailDCC02.f90
src/lib/: libcocktaildcc.f90  libdcc.f90  libendf.f90  libexponential.f90  libpinpoint.f90  libutil.f90  libxmath.f90
